tests/valid/variables/initialize.rs
/*
return: 0
*/

main(): i32 {
    a: i64 = 2;
    return 0;
}