tests/invalid/loops/out_of_scope_do_while.rs
/*
compilationExitCode: 3
*/

main(): i32 {
    do {
        a: i64 = 2;
    } while (a);
    return 0;
}